fix: add overflow-x to body

--- a/components/navigation/linksList/listItem/listItem.module.scss
+++ b/components/navigation/linksList/listItem/listItem.module.scss
@@ -24,18 +24,18 @@
 }
 
 .link {
-  font-size: 2.6rem;
+  font-size: 2.4rem;
   font-weight: 500;
   color: var(--white);
   text-decoration: none;
   position: relative;
 
   @include mediaquery('sm') {
-    font-size: 2.8rem;
+    font-size: 2.6rem;
   }
 
   @include mediaquery('lg') {
-    font-size: 3rem;
+    font-size: 2.8rem;
   }
 
   @include mediaquery('xl') {
