--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -70,6 +70,13 @@ html {
   font-size: 62.5%;
 }
 
+html,
+body {
+  overflow-x: hidden;
+  position: relative;
+  height: 100%;
+}
+
 .content {
   p {
     font-size: 1.8rem;
